adding css to logotekst

--- a/indholdforside.css
+++ b/indholdforside.css
@@ -10,3 +10,10 @@ body {
 	    margin: 0;
   		padding: 0;
 }
+
+.logotekst{
+	
+	    color: #FAF6F5;
+	    font-family: 'raleway';
+	    font-style: bold;	
+}
