adding wrapper and better structure

--- a/indholdforside.css
+++ b/indholdforside.css
@@ -11,6 +11,17 @@ body {
   		padding: 0;
 }
 
+.wrapper {
+	   
+	    display: flex;
+	    flex-direction: column;
+	    justify-content: center;
+	    margin-left: 40px;
+	    margin-right: 40px;
+	    margin-bottom: 30px;
+	    text-align: left;
+}
+
 .logotekst{
 	
 	    color: #FAF6F5;
@@ -19,6 +30,5 @@ body {
 	    text-align: center;
 	    line-height: 0.8;
 	    font-size: 25px;
-	    
-	    margin-top: 10%;
+	    margin-top: 50%;
 }
