adding class to arrow image

--- a/indholdforside.css
+++ b/indholdforside.css
@@ -33,6 +33,13 @@ body {
 	    margin-top: 50%;
 }
 
+.logoimage{
+	
+	    margin-top: 130px;
+	
+	
+}
+
 /*Example found on w3schools - mediaquery_breakpoints*/
 
 /*small devices*/
