--- a/guidestyle.css
+++ b/guidestyle.css
@@ -1,23 +1,194 @@
 @charset "utf-8";
 /* CSS Document */
 
-body{
-	
-	background-origin: #FFFFFF;	
-	
+
+
+*, *::after, *::before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
+
+html * {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+html {
+	
+  scroll-behavior: smooth;
+  font-size: 62.5%;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+body {
+	
+	line-height: 1;
+	background-origin: #FFFFFF;
+    font-size: 1.6rem;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+header{
+	
+	background-color: #002F67;
+		
+}
+
+header {
+	
+    position: fixed;
+    height: 50px;
+    width: 100%;
+    top: 0;
+    left: 0;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+}
+
+header nav {
+	
+   display: inline-block;
+}
+
+  header {
+	  
+   height: 80px;
+  }
+
+    
+  header:after {
+	  
+   content: "";
+   display: table;
+   clear: both;
+  }
+
 
 .logo{
 	
-	background-color: #002F67;
-	width: 200px;
-	height: 100px;	
+	display: inline-block;
+    height: 100%;
+    position: relative;
+	width: 185px;
+		
 }
+
+.logo img {
+    position: absolute;
+    display: block;
+    top: 25%;
+    left: 15%;   
+}
+
 
 .main-nav{
 	
-	background-color: #002F67;
-	
-	
+	background-color: #002F67;	
 	
 }
+
+.main-nav {
+	
+  /* main navigation background color - full screen on small devices */
+	position: static;
+    display: table;
+    width: auto;
+    height: 80px;
+    background: transparent;
+    padding: 0 2em;
+    text-align: left;
+}
+
+ .main-nav li {
+    display: table-cell;
+    vertical-align: middle;
+    padding: 0 1em;
+  }
+
+.main-nav li:first-of-type a {
+  border-top-width: 1px;
+  border-top: none;
+}
+  
+
+.main-nav li a {
+    color: #ffffff;
+	display: block;
+    font-size: 1.8rem;
+    padding: 1em 0;
+    border-bottom-width: 1px;
+    border-style: solid;
+    border-color: #262627;
+}
+
+  .main-nav li a.selected {
+    color: #ffffff;
+	
+  }
+  .no-touch .main-nav li a:hover {
+    color: #ffffff;
+	display: inline-block;
+    font-size: 1.6rem;
+    padding: .4em .2em;
+    border-bottom: none;
+  }
+
+.nav-trigger span::before, .nav-trigger span::after {
+  /* upper and lower lines */
+    background-color: #ffffff;
+	
+}
+
+
+
+.nav-trigger {
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 50px;
+  overflow: hidden;
+  white-space: nowrap;
+  color: transparent;
+}
+.nav-trigger span {
+  position: absolute;
+  height: 2px;
+  width: 20px;
+  top: 50%;
+  margin-top: -1px;
+  left: 50%;
+  margin-left: -10px;
+  -webkit-transition: background-color 0.3s 0.3s;
+  -moz-transition: background-color 0.3s 0.3s;
+  transition: background-color 0.3s 0.3s;
+}
+.nav-trigger span::before, .cd-nav-trigger span::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /* Force Hardware Acceleration in WebKit */
+}
+
+  .nav-trigger {
+    display: none;
+  }
+
+
+
+ 
+ 
