--- a/css/styleguide-css.css
+++ b/css/styleguide-css.css
@@ -91,9 +91,9 @@ header:after {
 
 .logo{
   display: inline-block;
-  height: 100%;
+  height: 80px;
   position: relative;
-  width: 185px;
+  width: 70px;
 		
 }
 
@@ -193,7 +193,6 @@ ul main-nav{
   -moz-transition: background-color 0.3s 0.3s;
   transition: background-color 0.3s 0.3s;
 }
-
 .nav-trigger span::before, .cd-nav-trigger span::after {
   content: '';
   position: absolute;
