--- a/css/styleguide-css.css
+++ b/css/styleguide-css.css
@@ -142,19 +142,19 @@ header:after {
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section, main {
-	display: block;
+  display: block;
 }
 
 ol, ul{
-	list-style: none;
+  list-style: none;
 }
 blockquote, q {
-	quotes: none;
+  quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+  content: '';
+  content: none;
 }
 
 .btn {
@@ -165,7 +165,7 @@ q:before, q:after {
   color: #FFFFFF;
   padding: .6em 2.2em;
   cursor: pointer;
-  background: #5f8ee4;
+  background: #5F8EE4;
 }
 
 .logo{
@@ -235,10 +235,6 @@ q:before, q:after {
   border-bottom: none;
   }
 
-ul main-nav{
-	
-	
-}
 
 .nav-trigger span::before, .nav-trigger span::after {
   /* Upper and lower lines */
@@ -284,9 +280,9 @@ ul main-nav{
 
 
 section {
-    width: 48%;
-    float: left;
-    margin: 0 4% 4em 0;
+  width: 48%;
+  float: left;
+  margin: 0 4% 4em 0;
   }
 
 section:after {
@@ -318,7 +314,7 @@ section:nth-of-type(7) h2::before {
  
 
 section:nth-of-type(2n) {
-    margin-right: 0;
+  margin-right: 0;
   }
 
 
@@ -369,22 +365,10 @@ section:nth-of-type(2n) {
   border-radius: .6em;
 }
 
-.branding ul:last-of-type li:nth-of-type(3) img {
-  width: 32px;
-  height: 32px;
-  border-radius: .4em;
-}
-
-.branding ul:last-of-type li:nth-of-type(4) img {
-  width: 16px;
-  height: 16px;
-  border-radius: .2em;
-}
 
 .branding .box:nth-of-type(1n) {
   margin-right: 20px;
   }
-
 
 
 /* Color section - basic style */
@@ -448,51 +432,119 @@ section:nth-of-type(2n) {
 }
   
 .colors li:nth-of-type(7n) {
-    margin-right: 0;
+  margin-right: 0;
   }
 
 /* Typography section - basic style */
 .typography h1::before {
   content: 'Raleway - ';
-  color: #ED6B86;
+  color: #3385E8;
 }
+
+/* Background section - basic style */
+.background .box {
+  margin-bottom: 1em;
+  padding: 6px;
+  width: 46%;
+  float: left;
+}
+
+.background img {
+  display: block;
+  width: 100%;
+}
+
+.background ul:last-of-type {
+  padding-top: .6em;
+  clear: left;
+}
+
+.background ul:last-of-type li {
+  display: inline-block;
+  margin-right: 1em;
+}
+
+.background ul:last-of-type li:nth-of-type(1) img {
+  width: 60px;
+  height: 60px;
+  border-radius: .6em;
+}
+
+.background ul:last-of-type li:nth-of-type(2) img {
+  width: 60px;
+  height: 60px;
+  border-radius: .6em;
+}
+
+.background .box:nth-of-type(1n) {
+  margin-right: 20px;
+  }
 
 /* Button - basic style */
 
 .button {
-	box-shadow: inset 0px 1px 0px 0px #ffffff;
-	background: linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
-	border-radius: 2px;
-	border: 1px solid #dcdcdc;
-	display: inline-block;
-	cursor: pointer;
-    top: 50%;
-        font-weight: bold;
-        font-family: 'Source Sans Pro', sans-serif;
-    padding: 10px;
-	margin: 15px;
+  box-shadow: inset 0px 1px 0px 0px #ffffff;
+  background: linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+  border-radius: 2px;
+  border: 1px solid #dcdcdc;
+  display: inline-block;
+  cursor: pointer;
+  top: 50%;
+  font-weight: bold;
+  padding: 10px;
+  margin: 15px;
 }
 
 .button a {
-	font-size: 1.4rem;
-  	line-height: 1.4;
-  	color: #707070;
+  font-size: 1.4rem;
+  line-height: 1.4;
+  color: #707070;
 }
 
 .action-button {
-   border: 2px solid #67CFAC;
-	width: 20%;
-	background: #67CFAC;
- 	font-size: 14px;
-	font-style:normal;
-	text-transform: uppercase;
-	color: #ffffff;
-	border-radius: 3px;
-	cursor: pointer;
-	padding: 10px 5px;
-	margin-top: 15px;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: bold;   
+  border: 2px solid #3385E8;
+  width: 20%;
+  background: #3385E8;
+  font-size: 14px;
+  font-style:normal;
+  text-transform: uppercase;
+  color: #ffffff;
+  border-radius: 3px;
+  cursor: pointer;
+  padding: 10px 5px;
+  margin-top: 15px;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: bold;   
+}
+
+/* Icons section - basic style */
+.box-icon {
+  background: #F0EAEA;
+  border-radius: 3px;
+  border: 1px solid #9CD9B8;
+  width: 50%;
+  height: 65px;
+  float: left;
+  text-align: center;
+}
+    
+.box-icon2 {
+  background: #F0EAEA;
+  border-radius: 3px;
+  border: 1px solid #9CD9B8;
+  width: 50%;
+  height: 65px;
+  float: left; 
+  margin-left: 0px;
+  text-align: center;
+}
+
+.icons li {
+  display: inline-block;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin: 20px;
+  width: 32px;  
 }
 
 
