--- a/css/styleguide-css.css
+++ b/css/styleguide-css.css
@@ -341,6 +341,8 @@ section:nth-of-type(2n) {
   background-color: #002F67;
   display: block;
   width: 100%;
+  height: 100%;
+  border: 10px solid #002F67;
 }
 
 .branding ul:last-of-type {
