--- a/css/styleguide-css.css
+++ b/css/styleguide-css.css
@@ -47,6 +47,7 @@ table {
 }
 
 body {
+  font-family: 'raleway';
   line-height: 1;
   background-origin: #FFFFFF;
   font-size: 1.6rem;
@@ -58,6 +59,7 @@ p {
   line-height: 1.4;
   color: #505050;
 }
+
 
 a {
   text-decoration: none;
@@ -92,7 +94,7 @@ h1, h2 {
 
 h1 {
   font-size: 2.4rem;
-  font-weight: 300;
+  font-weight: 500;
   line-height: 1.2;
   margin: 0 0 .4em;
 }
