--- a/css/fejlside-css.css
+++ b/css/fejlside-css.css
@@ -40,8 +40,7 @@ h1 {
 
 .logo img {
 		width: 60%;
-		padding-top: 15%;
-		height: auto;
+		padding-top: 5%;
 		opacity: 0.9;
 }
 
@@ -50,14 +49,14 @@ h1 {
 }
 
 .pile img {
-		width: 20%;
+		width: 30%;
 		padding-top: 15%;
-		height: auto;
+		height: 10%;
 
 }
 
 .tekstbox {
-	margin-top: 80px;
+	margin-top: 60px;
 	background-color: none;
 }
 
@@ -67,7 +66,7 @@ h2 {
 	font-size: 18px;
 	text-align: center;
 	text-decoration: none;
-	line-height: 2.5;
+	line-height: 4.5;
 }
 
 h2 a {
