--- a/css/oversigt-css.css
+++ b/css/oversigt-css.css
@@ -16,7 +16,7 @@ nav {
 		left: 0;
    		top: 0;
    		width: 100%;
-		height: 12%;
+		height: 13%;
    		text-align: center;		
 		}
 
@@ -63,7 +63,7 @@ nav {
 		margin-bottom: 10px;
 }
 
-section {
+.section {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -72,7 +72,10 @@ section {
 
 .top {
 		background-image: url("../billeder/dashboard.jpg");
-		height: 45%;
+		height: 250px;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
 }
 
 .slideText {
@@ -83,7 +86,7 @@ section {
 		color: #F0EAEA;
 		text-transform: uppercase;
 		text-align: right;
-		padding-top: 52%;
+		padding-top: 200px;
 		padding-right: 15px;
 		position: absolute;
 		transition: opacity .5s ease-in;
