--- a/css/livechat-css.css
+++ b/css/livechat-css.css
@@ -129,10 +129,14 @@ footer {
 
 /* Icons section - basic style */
 .box-icon {
-  width: 50%;
-  height: 100px;
-  float: left;
-  text-align: left;
+  width: 45%;
+  height: 90px;
+  float: right;
+  text-align: right;
+}
+
+.icons{
+  align-content: center;
 }
 
 .shearchbar {
@@ -141,7 +145,7 @@ footer {
   width: 60%;
   height: 100px;	
 }
-    
+
 .icons li {
   display: inline-block;
   background-position: center center;
