--- a/css/livechat-css.css
+++ b/css/livechat-css.css
@@ -48,7 +48,7 @@ nav {
 }
 
 img{
-	align-content: center;
+	align-content: left;
 	margin-right: 5px;	
 }
 
@@ -56,7 +56,7 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 85%;
+  height: 100%;
 }
 
 .top {
