--- a/css/styleguide-css.css
+++ b/css/styleguide-css.css
@@ -389,6 +389,10 @@ section:nth-of-type(2n) {
     
 }
 
+.colors ul{
+	display: flex;
+}
+
 .colors .color-swatch {
   position: relative;
   width: 100%;
