--- a/css/livechat-css.css
+++ b/css/livechat-css.css
@@ -11,7 +11,7 @@ body {
   font-family: 'Raleway', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #002f67;
+  background-color: #EBEBEB;
 }	
 
 .container{
@@ -28,10 +28,14 @@ nav {
 }
 
 .menu {
-  display: flex;
-  flex-direction: column;
+  /*display: flex;
+  flex-direction: column;*/
   justify-content: center;
-  margin-top: 6%;
+ padding-top: 3.5vh;
+  margin-bottom: 2vh;
+	height: 8vh;
+	width: 100vw;
+	background-color: #002f67;
 }
 
 .menu h2 {
@@ -41,19 +45,25 @@ nav {
   line-height: 0.5;
   margin-top: auto;
   margin-bottom: 10px;
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .menu h3 {
-  color: #F0EAEA;
+  color: #EBEBEB;
   font-size: 10px;
   font-weight: 400;
   text-transform: uppercase;
   line-height: 1;
-  margin-top: 0;
+  margin-top: 20px;;
   margin-bottom: 10px;
+  position: absolute;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
-img{
+.menu img{
 	align-content: center;
 	margin-right: 5px;	
 }
@@ -62,33 +72,33 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
+  height: 100%; 
 }
 
 body section .top {
-  background-color: #F0EAEA;
+  background-color: #EBEBEB;
   height: 5%;
 	   
 }
 
 .middle {
-  background-color: #F0EAEA;
-  height: 100%;
+  background-color: #EBEBEB;
+  height: 30vh;
+	width: 100vw;
 
 	   
 }
 
 .accordion {
-  background-color: #F0EAEA;
+  background-color: #EBEBEB;
   color: #002F67;
   cursor: pointer;
-  padding: 5px;
-  width: 100%;
+  padding: 1vh 0 1vh 5vw;
+  width: 100vw;
   border: none;
   text-align: left;
   outline: none;
   font-size: 20px;
-  transition: 0.4s;
 }
 
 .active, .accordion:hover {
@@ -96,9 +106,9 @@ body section .top {
 }
 
 .panel {
-  padding: 0 18px;
+  padding-right: 2.5vw;
   display: none;
-  background-color: #F0EAEA;
+  background-color: #EBEBEB;
   overflow: hidden;
 }
 
@@ -106,6 +116,13 @@ ol, ul{
   list-style: none;
 }
 
+ul {
+	padding-left: 5vw;
+}
+
+p {
+	margin: 2.2vh 0;
+}
 
 hr1{
   border: 8px #002F67;
@@ -116,38 +133,38 @@ hr1{
 
 footer {
   left: 0;
-  bottom: 0;
+  bottom: 0px;
   position: inherit;
   width: 100%;
   height: 10%;
   text-align: center;
+	background-color: black;
 }
 
 /* Icons section - basic style */
 .box-icon {
-  width: 45%;
   height: 90px;
   float: right;
-  text-align: right;
+  text-align: center;
+	margin-top: 47vh;
+	  position: absolute;
+	left: 45%;
+	transform: translate(-50%, -50%);
+
 }
 
 .icons{
   align-content: center;
+	
 }
 
-.shearchbar {
-  border-color: #002F67;
-  border-radius: 2px;
-  width: 60%;
-  height: 100px;	
-}
 
 .icons li {
   display: inline-block;
   background-position: center center;
   background-repeat: no-repeat;
   margin: 5px;
-  width: 30px;  
+   
 }
 
 
@@ -157,7 +174,7 @@ footer {
 @media screen and (min-width: 200px)
 {
    	body{
-	  background-image: linear-gradient(black, #3385E8); }
+	  background-color: #ebebeb; }
 
 }
 
@@ -166,13 +183,14 @@ footer {
 {
    	body{
 	  background-image: linear-gradient(#002f67, #3385E8); }
+	
 }
 
 /*medium devices*/
 @media screen and (min-width: 600px)
 {
 	body{
-	  background-image: linear-gradient(red, #3385E8); }	
+	  background-image: linear-gradient(red, #3385E8); }
 	
 }
 
