--- a/css/progress-bar.css
+++ b/css/progress-bar.css
@@ -7,8 +7,11 @@
 }
 
 #myBar {
-  width: 5%;
+  width: 10%;
   height: 30px;
   background-color: #9cd9b8;
+  text-align: center;
+  line-height: 30px;
+    color: whrite;
 }
 
