--- a/css/progress-bar.css
+++ b/css/progress-bar.css
@@ -4,6 +4,7 @@
     margin: 50px;
   width: 50%;
   background-color: #ebebeb;
+    border-radius: 5px;
 }
 
 #myBar {
@@ -12,6 +13,8 @@
   background-color: #9cd9b8;
   text-align: center;
   line-height: 30px;
-    color: whrite;
+  color: whrite;
+    border-radius: 5px;
+    
 }
 
