--- a/css/chatroom-css.css
+++ b/css/chatroom-css.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 /* CSS Document */
 
+/*Comment was it is!*/
+
 html {
   height: 100%;
 }
@@ -9,148 +11,160 @@ body {
   font-family: 'Raleway', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #002f67;
+  background-color: #EBEBEB;
 }	
+
+.container{
+	max-width: 500px;
+	
+}
 
 nav {
   left: 0;
   top: 0;
   width: 100%;
-  height: 9%;
+  height: 12%;
   text-align: center;		
 }
 
 .menu {
-  display: flex;
-  flex-direction: column;
+  /*display: flex;
+  flex-direction: column;*/
   justify-content: center;
-  margin-top: 6%;
+ padding-top: 3.5vh;
+  margin-bottom: 2vh;
+	height: 8vh;
+	width: 100vw;
+	background-color: #002f67;
 }
 
 .menu h2 {
   color: #9CD9B8;
   font-size: 20px;
+  font-weight: 400;
   line-height: 0.5;
   margin-top: auto;
   margin-bottom: 10px;
-  font-weight: bold;
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .menu h3 {
-  color: #F0EAEA;
+  color: #EBEBEB;
   font-size: 10px;
+  font-weight: 400;
   text-transform: uppercase;
   line-height: 1;
-  margin-top: 0;
+  margin-top: 20px;;
   margin-bottom: 10px;
-  font-weight: bold;
+  position: absolute;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
-p{
-  text-align: left;
-	
-}
-
-p2{
-  text-align: left;
-	
-}
-
-img{
+.menu img{
 	align-content: center;
 	margin-right: 5px;	
 }
-
 
 section {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 90%;
+  height: 100%; 
 }
 
-.top {
-  background-color: #F0EAEA;
-  height: 1%;
+body section .top {
+  background-color: #EBEBEB;
+  height: 5%;
 	   
 }
 
 .middle {
-  background-color: #F0EAEA;
-  height: 100%;
+  background-color: #EBEBEB;
+  height: 30vh;
+	width: 100vw;
+
 	   
 }
 
-footer {
-  left: 0;
-  bottom: 0;
-  position: fixed;
-  width: 100%;
-  height: 10%;
-  text-align: center;
+
+ol, ul{
+  list-style: none;
 }
 
-/* Icons section - basic style */
-.box-icon {
-  width: 35%;
-  height: 90px;
-  float: right;
-  text-align: right;
+ul {
+	padding-left: 5vw;
 }
 
-.shearchbar {
-  border-color: #002F67;
-  border-radius: 2px;
-  width: 60%;
-  height: 100px;	
-}
-    
-.icons li {
-  display: inline-block;
-  background-position: center center;
-  background-repeat: no-repeat;
-  margin: 5px;
-  width: 30px;  
+p {
+	margin: 2.2vh 0;
 }
 
-
-.container {
-  border: 5px solid #F0EAEA;
-  background-color: #F0EAEA;
+.chat {
+  border: 5px solid #EBEBEB;
+  background-color: #FAF6F5;
   border-radius: 5px;
   padding: 10px;
   margin: 5px 0;
-  font-size: 12px;
+  font-size: 15px;
   font-weight: bold;
  
 }
 
-.darker {
-  border-color: #9CD9B8;
-  background-color: #9CD9B8;
-  font-size: 12px;
-  font-weight: bold;
-}
-
-.container::after {
+.chat::after {
   content: "";
   clear: both;
   display: table;
 }
 
 
-.time-right {
+.time {
   float: right;
   color: #002F67;
   font-size: 10px;
   border-radius: 50%;
+  margin-top: 3vh;
 }
 
-.time-left {
-  float: left;
-  color: #002F67;
-  font-size: 10px;
+
+footer {
+  left: 0;
+  bottom: 0px;
+  position: inherit;
+  width: 100%;
+  height: 10%;
+  text-align: center;
+	background-color: black;
 }
+
+/* Icons section - basic style */
+.box-icon {
+ 	height: 90px;
+	float: right;
+	text-align: center;
+	margin-top: 65vh;
+	position: absolute;
+	left: 45%;
+	transform: translate(-50%, -50%);
+
+}
+
+.icons{
+  align-content: center;
+	
+}
+
+
+.icons li {
+  display: inline-block;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin: 5px;
+   
+}
+
 
 /*Code inspired by w3schools - mediaquery_breakpoints*/
 
@@ -158,7 +172,7 @@ footer {
 @media screen and (min-width: 200px)
 {
    	body{
-	  background-image: linear-gradient(black, #3385E8); }
+	  background-color: #ebebeb; }
 
 }
 
@@ -167,13 +181,14 @@ footer {
 {
    	body{
 	  background-image: linear-gradient(#002f67, #3385E8); }
+	
 }
 
 /*medium devices*/
 @media screen and (min-width: 600px)
 {
 	body{
-	  background-image: linear-gradient(red, #3385E8); }	
+	  background-image: linear-gradient(red, #3385E8); }
 	
 }
 
