--- a/css/addcar.css
+++ b/css/addcar.css
@@ -83,3 +83,10 @@ h5 {
 	font-weight: 1;
 	color: white;
 }
+
+a {
+	color: white;
+	font-family: 'Raleway', sans-serif;
+	font-size: 20px;
+	text-decoration: none;
+}
