--- a/css/addcar.css
+++ b/css/addcar.css
@@ -2,21 +2,16 @@
 /* CSS Document */
 
 body {
-	font-family: 'Raleway', sans-serif;
-	color: white;
-	background: rgb(2,0,36);
-	background: -webkit-linear-gradient(rgba(2,0,36,1) 0%, rgba(0,47,103,1) 0%, rgba(50,134,231,1) 100%);
-	background: -o-linear-gradient(rgba(2,0,36,1) 0%, rgba(0,47,103,1) 0%, rgba(50,134,231,1) 100%);
-	background: linear-gradient(rgba(2,0,36,1) 0%, rgba(0,47,103,1) 0%, rgba(50,134,231,1) 100%);
-	background-position: center;
-	background-repeat: no-repeat;
-	height: 941px;
-	
+	margin: 0;
+  	padding: 0;
+	font-family: 'Raleway', sans-serif;	
 }
 
 .top {
+	left: 0;
+   	top: 0;
 	background-image: url("../billeder/dashboard.jpg");
-	height: 300px;
+	height: 250px;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -42,44 +37,106 @@ button {
 }
 
 .container1 {
-	margin-top: 150px;
-	background: white;
+	margin-top: 100px;
+	margin-left: 10px;
+	margin-right: 10px;
+	background: #ffffff;
 	border-radius: 7px;
-	padding: 13px 100px;
-	width: 200px;
-	height: 150px;
+	padding: 13px 0px;
+	width: 300px;
+	height: 130px;
 	display: inline-block;
 	font-size: 10px;
-	text-align: left;
+	text-align: center;
 }
-.container {
+.container2 {
 	margin-top: 20px;
-	background: white;
+	margin-left: 10px;
+	margin-right: 10px;
+	background: #ffffff;
 	border-radius: 7px;
-	padding: 13px 100px;
-	width: 200px;
-	height: 150px;
+	padding: 13px 0px;
+	width: 300px;
+	height: 130px;
 	display: inline-block;
 	font-size: 10px;
-	text-align: left;
-	
+	text-align: center;	
 }
 
 p {
 	font-size: 10px;
-	color: black;
+	color: #000000;
+	text-align: left;
+	margin-left: 60px;
+}
+
+#info {
+	font-size: 12px;
+	color: #000000;
+	text-align: left;
+	margin-left: 40px;
+	margin-right: 40px;
+}
+
+h2 {
+	color: #FFFFFF;
 }
 
 h5 {
-	line-height: 3;
-	margin-top: 300px;
-	text-align: center;
-	color: white;
+	line-height: 2;
+	margin-top: 250px;
+	margin-left: 100px;
+	text-align: left;
+	color: #FFFFFF;
 }
 
 a {
-	color: white;
+	color: #FFFFFF;
 	font-family: 'Raleway', sans-serif;
 	font-size: 20px;
 	text-decoration: none;
+}
+
+/*Code inspired by w3schools - mediaquery_breakpoints*/
+
+/*smallest devices*/
+@media screen and (min-width: 200px)
+{
+   	body{
+	  background-image: linear-gradient(black, #3385e8); }
+
+}
+
+/*small devices - this is our preferable size*/
+@media screen and (min-width: 400px)
+{
+   	body{
+	  background-image: linear-gradient(#002f67, #3385E8); }
+	
+}
+
+/*medium devices*/
+@media screen and (min-width: 600px)
+{
+	body{
+	  background-image: linear-gradient(red, #3385E8); }
+	
+}
+
+/*Large devices - ipad pro*/
+
+@media screen and (min-width: 800px)
+{
+	body{
+	  background-image: linear-gradient(yellow, #3385E8);	}
+	
+}
+
+/*X-Large devices - fullscreen*/
+
+@media screen and (min-width: 2000px)
+{
+	body{
+	  background-image: linear-gradient(green, #3385E8);	}
+	
 }
